Added --add-opens option to failsafe plugin